Moda style fix on mobile

--- a/src/components/Modal/style.css
+++ b/src/components/Modal/style.css
@@ -124,7 +124,7 @@
     background-color: #0d0d0e;
 
     width: 100%;
-    min-height: 150px;
+    height: 150px;
     margin-top: 1.0rem;
 }
 
@@ -136,11 +136,16 @@
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
+
+    width: 100%;
 }
 
 .ModalChampionAbilitiesImage {
-    width: 12%;
     height: 64px;
+}
+
+.ModalChampionAbilitiesNameContainer {
+    width: 100%;
 }
 
 .ModalChampionAbilitiesName {
@@ -166,13 +171,45 @@
 }
 
 @media only screen and (min-width: 320px) and (max-width: 1000px) {
+
     .ModalChampionTitleDetail {
         font-size: 3em;
     }
+
+    .ModalChampionAbilitiesName {
+        font-size: 0.90rem;
+    }
 }
 
-@media only screen and (max-width: 320px) {
+@media only screen and (max-width: 414px) {
+
+    .ModalChampionAbilitiesContainer {
+        height: 100%;
+
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
     .ModalChampionTitleDetail {
         font-size: 2em;
+    }
+
+    .ModalChampionAbilities {
+        height: max-content;
+    }
+
+    .ModalChampionAbilitiesContent {
+        flex-flow: column wrap;
+    }
+
+    .ModalChampionAbilitiesDescription {
+        width: 100%;
+    }
+
+    .ModalChampionAbilitiesNameContainer {
+        display: flex;
+        justify-content: center;
     }
 }
